# flutter_gtk_native_view_example

./: .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
lib/: gtk_example.dart
lib/src/: method_channel.dart  platform_interface.dart  webview.dart  webview_linux.dart
linux/: CMakeLists.txt  gtk_example_plugin.cc
linux/include/gtk_example/: gtk_example_plugin.h
test/: gtk_example_test.dart
